{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 29,
  "lineage": "86be35ae-c72e-05eb-4644-b9479ac1469a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:security-group/sg-04b256cf029d034bd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04b256cf029d034bd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "643040131179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My_Project-dev-default-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-default-sg",
              "Project": "My_Project"
            },
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e5af0b503d8972d",
            "arn": "arn:aws:ec2:eu-west-1:643040131179:elastic-ip/eipalloc-01e5af0b503d8972d",
            "domain": "vpc",
            "id": "eipalloc-01e5af0b503d8972d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-246-192-37.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.246.192.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "My_Project-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-nat-eip",
              "Project": "My_Project"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:internet-gateway/igw-01552b4f15568a1ba",
            "id": "igw-01552b4f15568a1ba",
            "owner_id": "643040131179",
            "tags": {
              "Name": "My_Project-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-igw",
              "Project": "My_Project"
            },
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e5af0b503d8972d",
            "association_id": "eipassoc-0313097a1307d91aa",
            "connectivity_type": "public",
            "id": "nat-004eaebe979e9059d",
            "network_interface_id": "eni-06bf30f267c491056",
            "private_ip": "10.0.1.148",
            "public_ip": "34.246.192.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ff97fb993131963c",
            "tags": {
              "Name": "My_Project-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-nat",
              "Project": "My_Project"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:route-table/rtb-0ae61af12dda662fd",
            "id": "rtb-0ae61af12dda662fd",
            "owner_id": "643040131179",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004eaebe979e9059d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My_Project-dev-rt-private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-rt-private",
              "Project": "My_Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:route-table/rtb-004fa39688feeca91",
            "id": "rtb-004fa39688feeca91",
            "owner_id": "643040131179",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01552b4f15568a1ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My_Project-dev-rt-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-rt-public",
              "Project": "My_Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdf6e8258e0bc614",
            "route_table_id": "rtb-0ae61af12dda662fd",
            "subnet_id": "subnet-0822e5c7c8119cdf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076ad8bd1d1f445c2",
            "route_table_id": "rtb-004fa39688feeca91",
            "subnet_id": "subnet-0ff97fb993131963c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:security-group/sg-04e8518e08f545e46",
            "description": "Instance SG (private). No SSH.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "SSM to VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b31defeaadb40c7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-04e8518e08f545e46",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "App port from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "My_Project-dev-app-sg",
            "name_prefix": "",
            "owner_id": "643040131179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My_Project-dev-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-app-sg",
              "Project": "My_Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:security-group/sg-03b31defeaadb40c7",
            "description": "Interface endpoint SG (SSM).",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS to within VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-03b31defeaadb40c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from within VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "My_Project-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "643040131179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My_Project-dev-vpce-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-vpce-sg",
              "Project": "My_Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:subnet/subnet-0822e5c7c8119cdf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0822e5c7c8119cdf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643040131179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My_Project-dev-private-eu-west-1a",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-private-eu-west-1a",
              "Project": "My_Project",
              "Tier": "private"
            },
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:subnet/subnet-0ff97fb993131963c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff97fb993131963c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643040131179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My_Project-dev-public-eu-west-1a",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-public-eu-west-1a",
              "Project": "My_Project",
              "Tier": "public"
            },
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:vpc/vpc-0ab396ca2b287828c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d071849d7af28b0b",
            "default_route_table_id": "rtb-03f5d9fc7d43e28ab",
            "default_security_group_id": "sg-04b256cf029d034bd",
            "dhcp_options_id": "dopt-061dd4aa5392fc6f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab396ca2b287828c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f5d9fc7d43e28ab",
            "owner_id": "643040131179",
            "tags": {
              "Name": "My_Project-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-vpc",
              "Project": "My_Project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:vpc-endpoint/vpce-050e64848402d4f2f",
            "dns_entry": [
              {
                "dns_name": "vpce-050e64848402d4f2f-oc1e4pg7.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-050e64848402d4f2f-oc1e4pg7-eu-west-1a.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2messages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z08183756MIPQAFHCG5G"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-050e64848402d4f2f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0f8daaa3c892d1b74"
            ],
            "owner_id": "643040131179",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03b31defeaadb40c7"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2messages",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.149",
                "subnet_id": "subnet-0822e5c7c8119cdf9"
              }
            ],
            "subnet_ids": [
              "subnet-0822e5c7c8119cdf9"
            ],
            "tags": {
              "Name": "My_Project-dev-vpce-ec2messages"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-vpce-ec2messages",
              "Project": "My_Project"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:vpc-endpoint/vpce-0bb2f1bad5914b71e",
            "dns_entry": [
              {
                "dns_name": "vpce-0bb2f1bad5914b71e-oie9g6ef.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0bb2f1bad5914b71e-oie9g6ef-eu-west-1a.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssm.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z08802743PJTO7C33PHSO"
              },
              {
                "dns_name": "ssm.eu-west-1.api.aws",
                "hosted_zone_id": "Z0304806QCWAY8GLRJZ1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bb2f1bad5914b71e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bc8201b38016c6a5"
            ],
            "owner_id": "643040131179",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03b31defeaadb40c7"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssm",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.128",
                "subnet_id": "subnet-0822e5c7c8119cdf9"
              }
            ],
            "subnet_ids": [
              "subnet-0822e5c7c8119cdf9"
            ],
            "tags": {
              "Name": "My_Project-dev-vpce-ssm"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-vpce-ssm",
              "Project": "My_Project"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643040131179:vpc-endpoint/vpce-03df484ad8a95a068",
            "dns_entry": [
              {
                "dns_name": "vpce-03df484ad8a95a068-fub85asz.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-03df484ad8a95a068-fub85asz-eu-west-1a.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z08562292G0L9U1U5QTVU"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.api.aws",
                "hosted_zone_id": "Z08578377C4SH0E44OG7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03df484ad8a95a068",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-008e3afa3e22fe12e"
            ],
            "owner_id": "643040131179",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03b31defeaadb40c7"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssmmessages",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.186",
                "subnet_id": "subnet-0822e5c7c8119cdf9"
              }
            ],
            "subnet_ids": [
              "subnet-0822e5c7c8119cdf9"
            ],
            "tags": {
              "Name": "My_Project-dev-vpce-ssmmessages"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "My_Project-dev-vpce-ssmmessages",
              "Project": "My_Project"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ab396ca2b287828c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}